Fixed an issue on the individual pokemon page where scrollbars were showing up on each tab at larger screen sizes

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -292,9 +292,12 @@ code {
   display: flex;
   justify-content: space-around;
   text-align: center;
-  height: fit-content;
   flex-wrap: wrap;
-  overflow-y: scroll;
+  // overflow-y: scroll;
+}
+
+#single-item {
+  height: max-content
 }
 
 @media screen and (max-width: 992px) {
